<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My pkgs</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="not_installed">Not installed</string>
    <string name="description_application_name" translatable="false">application name</string>
    <string name="description_package_name" translatable="false">package name</string>
    <string name="open_source_license">Open source license</string>
    <string name="about">About</string>
    <string name="description_list_parent" translatable="false">listItem</string>

    <string name="title_all">All</string>
    <string name="title_all_running">All, running</string>
    <string name="title_system">System</string>
    <string name="title_system_running">System, running</string>
    <string name="title_system_undisablable">Undisablable</string>
    <string name="title_system_undisablable_running">Undisablable, running</string>
    <string name="title_system_disablable">Disablable</string>
    <string name="title_system_disablable_running">Disablable, running</string>
    <string name="title_disabled">"Disabled"</string>
    <string name="title_user">"User"</string>
    <string name="title_user_running">"User, running"</string>
    <string name="title_default">Default</string>
    <string name="reload">Reload</string>
    <string name="title_label">App name</string>
    <string name="title_package_name">Package name</string>
    <string name="title_label_and_package_name">App name &amp; Package name</string>
    <string name="title_csv">CSV</string>

    <string name="pref_key_enabled_advanced" translatable="false">pref_key_enabled_advanced</string>
    <string name="pref_title_enabled_advanced">Use advanced features</string>
    <string name="pref_summary_enabled_advanced">You can use advanced features. The features are for the experienced. Please do at your own risk.</string>

    <string name="title_activity_settings">Settings</string>
    <string name="preference">Preference</string>


    <string name="adUnitId" translatable="false">ca-app-pub-2998260208076899/4555689360</string>


    <string name="pref_category_sort">Sort</string>
    <string name="pref_key_sort" translatable="false">Sort</string>
    <string name="pref_title_sort_default">Default</string>
    <string name="pref_summary_sort_default">Order by app name, package name</string>
    <string name="pref_title_sort_package_name">Package name</string>
    <string name="pref_summary_sort_package_name">Order by package name</string>
    <string name="pref_title_sort_update_time_desc">Update time desc</string>
    <string name="pref_summary_sort_update_time_desc">Order by update time desc, app name, package name</string>

    <string name="pref_category_filters">Categories</string>
    <string name="pref_key_filters" translatable="false">Categories</string>

    <string name="summary_all" />
    <string name="summary_all_running" />
    <string name="summary_system" />
    <string name="summary_system_running" />
    <string name="summary_system_undisablable">Applications that you cannot click disable button.</string>
    <string name="summary_system_undisablable_running" />
    <string name="summary_system_disablable">Applications that you can click disable button.</string>
    <string name="summary_system_disablable_running" />
    <string name="summary_disabled" />
    <string name="summary_user" />
    <string name="summary_user_running" />
    <string name="summary_default">Applications that are default for some action. Ex: launcher app</string>

    <string name="pref_category_app_information">App information</string>
    <string name="pref_key_app_information" translatable="false">appInformation</string>
    <string name="title_info_process">Process</string>
    <string name="title_info_not_installed">Not installed</string>
    <string name="title_info_first_install_time">First install time</string>
    <string name="title_info_last_update_time">Last update time</string>
    <string name="summary_info_process" />
    <string name="summary_info_not_installed" />
    <string name="summary_info_first_install_time" />
    <string name="summary_info_last_update_time" />
    <string name="format_first_install_time">First install : %1$s</string>
    <string name="format_last_update_time">Last update : %1$s</string>
</resources>
